; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_passthru.c_read_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_passthru.c_read_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcisel = type { i32 }
%struct.pci_io = type { i64, i32, i32, %struct.pcisel }

@pcifd = common dso_local global i32 0, align 4
@PCIOCREAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcisel*, i64, i32)* @read_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_config(%struct.pcisel* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pcisel*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.pci_io, align 8
  store %struct.pcisel* %0, %struct.pcisel** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = call i32 @bzero(%struct.pci_io* %8, i32 24)
  %10 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %8, i32 0, i32 3
  %11 = load %struct.pcisel*, %struct.pcisel** %5, align 8
  %12 = bitcast %struct.pcisel* %10 to i8*
  %13 = bitcast %struct.pcisel* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %12, i8* align 4 %13, i64 4, i1 false)
  %14 = load i64, i64* %6, align 8
  %15 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %8, i32 0, i32 0
  store i64 %14, i64* %15, align 8
  %16 = load i32, i32* %7, align 4
  %17 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %8, i32 0, i32 1
  store i32 %16, i32* %17, align 8
  %18 = load i32, i32* @pcifd, align 4
  %19 = load i32, i32* @PCIOCREAD, align 4
  %20 = call i64 @ioctl(i32 %18, i32 %19, %struct.pci_io* %8)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %26

23:                                               ; preds = %3
  %24 = getelementptr inbounds %struct.pci_io, %struct.pci_io* %8, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %23, %22
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @bzero(%struct.pci_io*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @ioctl(i32, i32, %struct.pci_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
